add some more tests
git-svn-id: svn+ssh://frodo/cluster/svn/projects@9337 3eda493b-6a19-0410-b2e0-ec8ea4dd8fda

--- a/psc_fsutil_libs/tests/bitflag/Makefile
+++ b/psc_fsutil_libs/tests/bitflag/Makefile
@@ -6,5 +6,6 @@ PROG=	bitflag
 SRCS+=	bitflag.c
 SRCS+=	${PFL_BASE}/psc_util/alloc.c
 SRCS+=	${PFL_BASE}/psc_util/log.c
+SRCS+=	${PFL_BASE}/psc_util/printhex.c
 
 include ${PFLMK}
