--- a/psc_fsutil_libs/tests/Makefile
+++ b/psc_fsutil_libs/tests/Makefile
@@ -12,6 +12,7 @@ SUBDIRS+=	lock
 SUBDIRS+=	lock2
 SUBDIRS+=	mlock
 SUBDIRS+=	multilock
+SUBDIRS+=	mutex
 SUBDIRS+=	prsig
 SUBDIRS+=	random
 SUBDIRS+=	rwlock
