--- a/psc_fsutil_libs/tests/list/Makefile
+++ b/psc_fsutil_libs/tests/list/Makefile
@@ -6,6 +6,7 @@ PROG=		list_test
 SRCS+=		list_test.c
 SRCS+=		${PFL_BASE}/psc_util/alloc.c
 SRCS+=		${PFL_BASE}/psc_util/init.c
+SRCS+=		${PFL_BASE}/psc_util/list.c
 SRCS+=		${PFL_BASE}/psc_util/log.c
 
 include ${PFLMK}
