--- a/psc_fsutil_libs/tests/Makefile
+++ b/psc_fsutil_libs/tests/Makefile
@@ -11,7 +11,7 @@ SUBDIRS+=	list
 SUBDIRS+=	lock
 SUBDIRS+=	lock2
 SUBDIRS+=	mlock
-SUBDIRS+=	multilock
+SUBDIRS+=	multiwait
 SUBDIRS+=	mutex
 SUBDIRS+=	prsig
 SUBDIRS+=	random
