--- a/psc_fsutil_libs/tests/multiwait/Makefile
+++ b/psc_fsutil_libs/tests/multiwait/Makefile
@@ -9,7 +9,7 @@ SRCS+=		${PFL_BASE}/psc_ds/vbitmap.c
 SRCS+=		${PFL_BASE}/psc_util/alloc.c
 SRCS+=		${PFL_BASE}/psc_util/init.c
 SRCS+=		${PFL_BASE}/psc_util/log.c
-SRCS+=		${PFL_BASE}/psc_util/multilock.c
+SRCS+=		${PFL_BASE}/psc_util/multiwait.c
 SRCS+=		${PFL_BASE}/psc_util/pthrutil.c
 
 DEFINES+=	-DHAVE_LIBPTHREAD
