--- a/psc_fsutil_libs/tests/refmgr/Makefile
+++ b/psc_fsutil_libs/tests/refmgr/Makefile
@@ -4,7 +4,7 @@ include ../Makefile.path
 
 PROG=		refmgr_test
 SRCS=		refmgr_test.c
-SRCS+=		${PFL_BASE}/psc_ds/pool.c
 SRCS+=		${PFL_BASE}/psc_util/log.c
+SRCS+=		${PFL_BASE}/psc_util/pool.c
 
 include ${PFLMK}
