--- a/psc_fsutil_libs/tests/acsvc/Makefile
+++ b/psc_fsutil_libs/tests/acsvc/Makefile
@@ -5,7 +5,7 @@ include ../Makefile.path
 PROG=		acsvc_test
 SRCS=		acsvc_test.c
 SRCS+=		${PFL_BASE}/psc_ds/dynarray.c
-SRCS+=		${PFL_BASE}/psc_ds/hash.c
+SRCS+=		${PFL_BASE}/psc_ds/hash2.c
 SRCS+=		${PFL_BASE}/psc_ds/vbitmap.c
 SRCS+=		${PFL_BASE}/psc_util/acsvc.c
 SRCS+=		${PFL_BASE}/psc_util/alloc.c
