--- a/Makefile.path
+++ b/Makefile.path
@@ -3,4 +3,5 @@
 LNET_BASE=	${ROOTDIR}/lnet-lite
 PFL_BASE?=	${ROOTDIR}/psc_fsutil_libs
 ZFS_BASE=	${ROOTDIR}/zfs/zfs-fuse-0.5.0_slash/src
+FUSE_BASE=	${ROOTDIR}/fuse/fuse-2.8.1
 MAINMK=		${ROOTDIR}/mk/main.mk
