update to use MODULES and tidying
git-svn-id: svn+ssh://frodo/cluster/svn/projects@9806 3eda493b-6a19-0410-b2e0-ec8ea4dd8fda

--- a/psc_fsutil_libs/tests/hash2/Makefile
+++ b/psc_fsutil_libs/tests/hash2/Makefile
@@ -3,7 +3,7 @@
 include ../Makefile.path
 
 PROG=		hash2_test
-SRCS=		hash2_test.c
+SRCS+=		hash2_test.c
 SRCS+=		${PFL_BASE}/psc_ds/hash2.c
 SRCS+=		${PFL_BASE}/psc_util/alloc.c
 SRCS+=		${PFL_BASE}/psc_util/init.c
