--- a/psc_fsutil_libs/tests/lock/Makefile
+++ b/psc_fsutil_libs/tests/lock/Makefile
@@ -3,7 +3,7 @@
 include ../Makefile.path
 
 PROG=		lock
-SRCS=		lock.c
+SRCS+=		lock.c
 SRCS+=		${PFL_BASE}/psc_ds/dynarray.c
 SRCS+=		${PFL_BASE}/psc_ds/vbitmap.c
 SRCS+=		${PFL_BASE}/psc_util/alloc.c
@@ -15,7 +15,6 @@ SRCS+=		${PFL_BASE}/psc_util/subsys.c
 SRCS+=		${PFL_BASE}/psc_util/thread.c
 SRCS+=		${PFL_BASE}/psc_util/waitq.c
 
-DEFINES+=	-DHAVE_LIBPTHREAD
-LDFLAGS+=	${THREAD_LIBS} -lrt ${NUMA_LIBS}
+MODULES+=	pthread
 
 include ${PFLMK}
