--- a/psc_fsutil_libs/tests/mutex/Makefile
+++ b/psc_fsutil_libs/tests/mutex/Makefile
@@ -3,10 +3,11 @@
 include ../Makefile.path
 
 PROG=		mutex_test
-SRCS=		mutex_test.c
+SRCS+=		mutex_test.c
 SRCS+=		${PFL_BASE}/psc_util/alloc.c
 SRCS+=		${PFL_BASE}/psc_util/log.c
 SRCS+=		${PFL_BASE}/psc_util/pthrutil.c
-LDFLAGS+=	${THREAD_LIBS}
+
+MODULES+=	pthread
 
 include ${PFLMK}
