--- a/psc_fsutil_libs/tests/prsig/Makefile
+++ b/psc_fsutil_libs/tests/prsig/Makefile
@@ -3,7 +3,7 @@
 include ../Makefile.path
 
 PROG=		prsig_test
-SRCS=		prsig_test.c
+SRCS+=		prsig_test.c
 SRCS+=		${PFL_BASE}/psc_util/alloc.c
 SRCS+=		${PFL_BASE}/psc_util/log.c
 SRCS+=		${PFL_BASE}/psc_util/prsig.c
