--- a/psc_fsutil_libs/tests/pscrpc_wait/Makefile
+++ b/psc_fsutil_libs/tests/pscrpc_wait/Makefile
@@ -2,8 +2,8 @@
 
 include ../Makefile.path
 
-PROG=		zrpcwait
-SRCS=		zrpcwait.c
-INCLUDES+=	-I${ZEST_BASE}/zestrpc -I${LNET_BASE}/include
+PROG=		rpcwait
+SRCS+=		rpcwait.c
+MODULES+=	lnet
 
-include ${ZESTMK}
+include ${PFLMK}
