--- a/psc_fsutil_libs/tests/rwlock/Makefile
+++ b/psc_fsutil_libs/tests/rwlock/Makefile
@@ -8,7 +8,7 @@ SRCS+=		${PFL_BASE}/psc_util/alloc.c
 SRCS+=		${PFL_BASE}/psc_util/init.c
 SRCS+=		${PFL_BASE}/psc_util/log.c
 SRCS+=		${PFL_BASE}/psc_util/random.c
-LDFLAGS+=	${THREAD_LIBS}
-DEFINES+=	-DHAVE_LIBPTHREAD
+
+MODULES+=	pthread
 
 include ${PFLMK}
