--- a/psc_fsutil_libs/tests/sig/Makefile
+++ b/psc_fsutil_libs/tests/sig/Makefile
@@ -3,7 +3,7 @@
 include ../Makefile.path
 
 PROG=		sig
-SRCS=		sig.c
-LDFLAGS+=	${THREAD_LIBS}
+SRCS+=		sig.c
+MODULES+=	pthread
 
 include ${PFLMK}
