--- a/psc_fsutil_libs/tests/vbitmap/Makefile
+++ b/psc_fsutil_libs/tests/vbitmap/Makefile
@@ -3,7 +3,7 @@
 include ../Makefile.path
 
 PROG=		vbitmap_test
-SRCS=		vbitmap_test.c
+SRCS+=		vbitmap_test.c
 SRCS+=		${PFL_BASE}/psc_ds/vbitmap.c
 SRCS+=		${PFL_BASE}/psc_util/alloc.c
 SRCS+=		${PFL_BASE}/psc_util/init.c
