--- a/psc_fsutil_libs/tests/acsvc/Makefile
+++ b/psc_fsutil_libs/tests/acsvc/Makefile
@@ -3,7 +3,7 @@
 include ../Makefile.path
 
 PROG=		acsvc_test
-SRCS=		acsvc_test.c
+SRCS+=		acsvc_test.c
 SRCS+=		${PFL_BASE}/psc_ds/dynarray.c
 SRCS+=		${PFL_BASE}/psc_ds/hash2.c
 SRCS+=		${PFL_BASE}/psc_ds/vbitmap.c
@@ -18,7 +18,6 @@ SRCS+=		${PFL_BASE}/psc_util/subsys.c
 SRCS+=		${PFL_BASE}/psc_util/thread.c
 SRCS+=		${PFL_BASE}/psc_util/waitq.c
 
-DEFINES+=	-DHAVE_LIBPTHREAD
-LDFLAGS+=	${THREAD_LIBS} -lrt ${NUMA_LIBS}
+MODULES+=	pthread
 
 include ${PFLMK}
