--- a/psc_fsutil_libs/tests/atomic/Makefile
+++ b/psc_fsutil_libs/tests/atomic/Makefile
@@ -3,11 +3,11 @@
 include ../Makefile.path
 
 PROG=		atomic
-SRCS=		atomic.c
+SRCS+=		atomic.c
 SRCS+=		${PFL_BASE}/psc_util/alloc.c
 SRCS+=		${PFL_BASE}/psc_util/init.c
 SRCS+=		${PFL_BASE}/psc_util/log.c
-DEFINES+=	-DHAVE_LIBPTHREAD
-LDFLAGS+=	${THREAD_LIBS}
+
+MODULES+=	pthread
 
 include ${PFLMK}
