--- a/psc_fsutil_libs/tests/fmtstr/Makefile
+++ b/psc_fsutil_libs/tests/fmtstr/Makefile
@@ -2,9 +2,9 @@
 
 include ../Makefile.path
 
-PROG=	fmtstr
-SRCS=	fmtstr.c
-SRCS+=	${PFL_BASE}/psc_util/alloc.c
-SRCS+=	${PFL_BASE}/psc_util/log.c
+PROG=		fmtstr
+SRCS+=		fmtstr.c
+SRCS+=		${PFL_BASE}/psc_util/alloc.c
+SRCS+=		${PFL_BASE}/psc_util/log.c
 
 include ${PFLMK}
