--- a/psc_fsutil_libs/tests/multiwait/Makefile
+++ b/psc_fsutil_libs/tests/multiwait/Makefile
@@ -3,7 +3,7 @@
 include ../Makefile.path
 
 PROG=		multiwait_test
-SRCS=		multiwait_test.c
+SRCS+=		multiwait_test.c
 SRCS+=		${PFL_BASE}/psc_ds/dynarray.c
 SRCS+=		${PFL_BASE}/psc_ds/vbitmap.c
 SRCS+=		${PFL_BASE}/psc_util/alloc.c
@@ -12,7 +12,6 @@ SRCS+=		${PFL_BASE}/psc_util/log.c
 SRCS+=		${PFL_BASE}/psc_util/multiwait.c
 SRCS+=		${PFL_BASE}/psc_util/pthrutil.c
 
-DEFINES+=	-DHAVE_LIBPTHREAD
-LDFLAGS+=	${THREAD_LIBS}
+MODULES+=	pthread
 
 include ${PFLMK}
