--- a/psc_fsutil_libs/tests/setprocesstitle/Makefile
+++ b/psc_fsutil_libs/tests/setprocesstitle/Makefile
@@ -3,7 +3,7 @@
 include ../Makefile.path
 
 PROG=		setprocesstitle_test
-SRCS=		setprocesstitle_test.c
+SRCS+=		setprocesstitle_test.c
 SRCS+=		${PFL_BASE}/psc_util/alloc.c
 SRCS+=		${PFL_BASE}/psc_util/log.c
 SRCS+=		${PFL_BASE}/psc_util/setprocesstitle.c
