--- a/psc_fsutil_libs/tests/atomic/Makefile
+++ b/psc_fsutil_libs/tests/atomic/Makefile
@@ -2,8 +2,8 @@
 
 include ../Makefile.path
 
-PROG=		atomic
-SRCS+=		atomic.c
+PROG=		atomic_test
+SRCS+=		atomic_test.c
 SRCS+=		${PFL_BASE}/psc_util/alloc.c
 SRCS+=		${PFL_BASE}/psc_util/init.c
 SRCS+=		${PFL_BASE}/psc_util/log.c
