--- a/psc_fsutil_libs/tests/bitflag/Makefile
+++ b/psc_fsutil_libs/tests/bitflag/Makefile
@@ -2,8 +2,8 @@
 
 include ../Makefile.path
 
-PROG=		bitflag
-SRCS+=		bitflag.c
+PROG=		bitflag_test
+SRCS+=		bitflag_test.c
 SRCS+=		${PFL_BASE}/psc_util/alloc.c
 SRCS+=		${PFL_BASE}/psc_util/log.c
 SRCS+=		${PFL_BASE}/psc_util/printhex.c
