--- a/psc_fsutil_libs/tests/fmtstr/Makefile
+++ b/psc_fsutil_libs/tests/fmtstr/Makefile
@@ -2,8 +2,8 @@
 
 include ../Makefile.path
 
-PROG=		fmtstr
-SRCS+=		fmtstr.c
+PROG=		fmtstr_test
+SRCS+=		fmtstr_test.c
 SRCS+=		${PFL_BASE}/psc_util/alloc.c
 SRCS+=		${PFL_BASE}/psc_util/log.c
 
