--- a/psc_fsutil_libs/utils/Makefile
+++ b/psc_fsutil_libs/utils/Makefile
@@ -4,6 +4,7 @@ include Makefile.path
 
 SUBDIRS+=	base64
 SUBDIRS+=	odtable
+SUBDIRS+=	random
 SUBDIRS+=	sock
 SUBDIRS+=	timecrc
 SUBDIRS+=	typedump
