add a pthread tester which reveals a problem on castor
git-svn-id: svn+ssh://frodo/cluster/svn/projects@9832 3eda493b-6a19-0410-b2e0-ec8ea4dd8fda

--- a/psc_fsutil_libs/tests/Makefile
+++ b/psc_fsutil_libs/tests/Makefile
@@ -14,6 +14,7 @@ SUBDIRS+=	mlock
 SUBDIRS+=	multiwait
 SUBDIRS+=	mutex
 SUBDIRS+=	prsig
+SUBDIRS+=	pthread
 SUBDIRS+=	rwlock
 SUBDIRS+=	setprocesstitle
 SUBDIRS+=	sig
