--- a/psc_fsutil_libs/tests/mutex/Makefile
+++ b/psc_fsutil_libs/tests/mutex/Makefile
@@ -5,8 +5,10 @@ include ../Makefile.path
 PROG=		mutex_test
 SRCS+=		mutex_test.c
 SRCS+=		${PFL_BASE}/psc_util/alloc.c
+SRCS+=		${PFL_BASE}/psc_util/init.c
 SRCS+=		${PFL_BASE}/psc_util/log.c
 SRCS+=		${PFL_BASE}/psc_util/pthrutil.c
+SRCS+=		${PFL_BASE}/psc_util/waitq.c
 
 MODULES+=	pthread
 
