--- a/psc_fsutil_libs/utils/odtable/Makefile
+++ b/psc_fsutil_libs/utils/odtable/Makefile
@@ -11,5 +11,6 @@ SRCS+=		${PFL_BASE}/psc_util/crc.c
 SRCS+=		${PFL_BASE}/psc_util/init.c
 SRCS+=		${PFL_BASE}/psc_util/log.c
 SRCS+=		${PFL_BASE}/psc_util/odtable.c
+SRCS+=		${PFL_BASE}/psc_util/strlcpy.c
 
 include ${PFLMK}
