plug in more docs
git-svn-id: svn+ssh://frodo/cluster/svn/projects@9981 3eda493b-6a19-0410-b2e0-ec8ea4dd8fda

--- a/psc_fsutil_libs/utils/odtable/Makefile
+++ b/psc_fsutil_libs/utils/odtable/Makefile
@@ -3,6 +3,7 @@
 include ../Makefile.path
 
 PROG=		odtable
+MAN+=		odtable.1
 SRCS=		odtable_test.c
 SRCS+=		${PFL_BASE}/psc_ds/dynarray.c
 SRCS+=		${PFL_BASE}/psc_ds/vbitmap.c
