--- a/psc_fsutil_libs/tests/multiwait/Makefile
+++ b/psc_fsutil_libs/tests/multiwait/Makefile
@@ -11,6 +11,7 @@ SRCS+=		${PFL_BASE}/psc_util/init.c
 SRCS+=		${PFL_BASE}/psc_util/log.c
 SRCS+=		${PFL_BASE}/psc_util/multiwait.c
 SRCS+=		${PFL_BASE}/psc_util/pthrutil.c
+SRCS+=		${PFL_BASE}/psc_util/strlcpy.c
 
 MODULES+=	pthread
 
