--- a/psc_fsutil_libs/tests/atomic/Makefile
+++ b/psc_fsutil_libs/tests/atomic/Makefile
@@ -7,6 +7,7 @@ SRCS+=		atomic_test.c
 SRCS+=		${PFL_BASE}/psc_util/alloc.c
 SRCS+=		${PFL_BASE}/psc_util/init.c
 SRCS+=		${PFL_BASE}/psc_util/log.c
+SRCS+=		${PFL_BASE}/psc_util/strlcpy.c
 
 MODULES+=	pthread
 
