--- a/psc_fsutil_libs/tests/fmtstr/Makefile
+++ b/psc_fsutil_libs/tests/fmtstr/Makefile
@@ -6,5 +6,6 @@ PROG=		fmtstr_test
 SRCS+=		fmtstr_test.c
 SRCS+=		${PFL_BASE}/psc_util/alloc.c
 SRCS+=		${PFL_BASE}/psc_util/log.c
+SRCS+=		${PFL_BASE}/psc_util/strlcpy.c
 
 include ${PFLMK}
