--- a/psc_fsutil_libs/tests/hash2/Makefile
+++ b/psc_fsutil_libs/tests/hash2/Makefile
@@ -8,5 +8,6 @@ SRCS+=		${PFL_BASE}/psc_ds/hash2.c
 SRCS+=		${PFL_BASE}/psc_util/alloc.c
 SRCS+=		${PFL_BASE}/psc_util/init.c
 SRCS+=		${PFL_BASE}/psc_util/log.c
+SRCS+=		${PFL_BASE}/psc_util/strlcpy.c
 
 include ${PFLMK}
