--- a/psc_fsutil_libs/tests/mutex/Makefile
+++ b/psc_fsutil_libs/tests/mutex/Makefile
@@ -8,6 +8,7 @@ SRCS+=		${PFL_BASE}/psc_util/alloc.c
 SRCS+=		${PFL_BASE}/psc_util/init.c
 SRCS+=		${PFL_BASE}/psc_util/log.c
 SRCS+=		${PFL_BASE}/psc_util/pthrutil.c
+SRCS+=		${PFL_BASE}/psc_util/strlcpy.c
 SRCS+=		${PFL_BASE}/psc_util/waitq.c
 
 MODULES+=	pthread
