--- a/psc_fsutil_libs/tests/prsig/Makefile
+++ b/psc_fsutil_libs/tests/prsig/Makefile
@@ -9,5 +9,6 @@ SRCS+=		${PFL_BASE}/psc_util/init.c
 SRCS+=		${PFL_BASE}/psc_util/log.c
 SRCS+=		${PFL_BASE}/psc_util/prsig.c
 SRCS+=		${PFL_BASE}/psc_util/strlcat.c
+SRCS+=		${PFL_BASE}/psc_util/strlcpy.c
 
 include ${PFLMK}
