--- a/psc_fsutil_libs/utils/timecrc/Makefile
+++ b/psc_fsutil_libs/utils/timecrc/Makefile
@@ -7,5 +7,6 @@ SRCS=		timecrc.c
 SRCS+=		${PFL_BASE}/psc_util/alloc.c
 SRCS+=		${PFL_BASE}/psc_util/crc.c
 SRCS+=		${PFL_BASE}/psc_util/log.c
+SRCS+=		${PFL_BASE}/psc_util/strlcpy.c
 
 include ${PFLMK}
