accept multiple args to options in perl getopts().  totally ridiculous that it has to be done manually
git-svn-id: svn+ssh://frodo/cluster/svn/projects@10172 3eda493b-6a19-0410-b2e0-ec8ea4dd8fda

--- a/psc_fsutil_libs/utils/typedump/Makefile
+++ b/psc_fsutil_libs/utils/typedump/Makefile
@@ -11,4 +11,6 @@ MODULES+=	lnet-hdrs pthread
 include ${PFLMK}
 
 gentypes regen:
-	@${GENTYPES} -h '../../include/*/*.h' -x '../../include/psc_ds/{queue,tree}.h' typedump.c
+	@${GENTYPES} -h '../../include/*/*.h'		\
+	    -x '../../include/psc_ds/{queue,tree}.h'	\
+	    -x '../../include/psc_util/refmgr.h' typedump.c
