more refmgr progress
git-svn-id: svn+ssh://frodo/cluster/svn/projects@10187 3eda493b-6a19-0410-b2e0-ec8ea4dd8fda

--- a/psc_fsutil_libs/tests/refmgr/Makefile
+++ b/psc_fsutil_libs/tests/refmgr/Makefile
@@ -4,7 +4,12 @@ include ../Makefile.path
 
 PROG=		refmgr_test
 SRCS+=		refmgr_test.c
+SRCS+=		${PFL_BASE}/psc_ds/dynarray.c
+SRCS+=		${PFL_BASE}/psc_util/alloc.c
+SRCS+=		${PFL_BASE}/psc_util/hash2.c
 SRCS+=		${PFL_BASE}/psc_util/log.c
 SRCS+=		${PFL_BASE}/psc_util/pool.c
+SRCS+=		${PFL_BASE}/psc_util/refmgr.c
+SRCS+=		${PFL_BASE}/psc_util/waitq.c
 
 include ${PFLMK}
