--- a/psc_fsutil_libs/tests/bitflag/Makefile
+++ b/psc_fsutil_libs/tests/bitflag/Makefile
@@ -5,6 +5,7 @@ include ../Makefile.path
 PROG=		bitflag_test
 SRCS+=		bitflag_test.c
 SRCS+=		${PFL_BASE}/psc_util/alloc.c
+SRCS+=		${PFL_BASE}/psc_util/init.c
 SRCS+=		${PFL_BASE}/psc_util/log.c
 SRCS+=		${PFL_BASE}/psc_util/printhex.c
 SRCS+=		${PFL_BASE}/psc_util/strlcpy.c
