activate zfs-fuse 0.6.0
git-svn-id: svn+ssh://frodo/cluster/svn/projects@10703 3eda493b-6a19-0410-b2e0-ec8ea4dd8fda

--- a/Makefile.path
+++ b/Makefile.path
@@ -2,7 +2,6 @@
 
 LNET_BASE=	${ROOTDIR}/lnet-lite
 PFL_BASE?=	${ROOTDIR}/psc_fsutil_libs
-#ZFS_BASE=	${ROOTDIR}/zfs/zfs-fuse-0.6.0/src
-ZFS_BASE=	${ROOTDIR}/zfs/zfs-fuse-0.5.0_slash/src
+ZFS_BASE=	${ROOTDIR}/zfs/zfs-fuse-0.6.0/src
 FUSE_BASE=	${ROOTDIR}/fuse/fuse-2.8.1
 MAINMK=		${ROOTDIR}/mk/main.mk
