- cleanup some make infrastructure: get rid of all these Makefile.path nuances.   in their place, we just tell where ROOTDIR is.
  it is more of a hassle when things move around, but that was mostly to support
  the earlier days when stuff was moving a lot, and should not be as common.

  things should be at least as simple as before: all you need to do is define
  ROOTDIR and include ${ROOTDIR}/Makefile.path

  we can always add a make target to recursively update the specification.

- auto detect sometimes when MODULES+=pfl

- this applies a thorough cleanup of the cscope/etags source list population


git-svn-id: svn+ssh://frodo/cluster/svn/projects@10899 3eda493b-6a19-0410-b2e0-ec8ea4dd8fda

--- a/Makefile.path
+++ b/Makefile.path
@@ -1,7 +1,13 @@
 # $Id$
 
+FUSE_BASE=	${ROOTDIR}/fuse/fuse-2.8.1
 LNET_BASE=	${ROOTDIR}/lnet-lite
 PFL_BASE?=	${ROOTDIR}/psc_fsutil_libs
+SLASH_BASE=	${ROOTDIR}/slash_nara
+ZEST_BASE=	${ROOTDIR}/zest
 ZFS_BASE=	${ROOTDIR}/zfs/zfs-fuse-0.6.0/src
-FUSE_BASE=	${ROOTDIR}/fuse/fuse-2.8.1
+
 MAINMK=		${ROOTDIR}/mk/main.mk
+PFLMK=		${PFL_BASE}/mk/main.mk
+SLASHMK=	${SLASH_BASE}/mk/main.mk
+ZESTMK=		${ZEST_BASE}/mk/main.mk
