--- a/psc_fsutil_libs/tests/bitflag/Makefile
+++ b/psc_fsutil_libs/tests/bitflag/Makefile
@@ -1,6 +1,7 @@
 # $Id$
 
-include ../Makefile.path
+ROOTDIR=../../..
+include ${ROOTDIR}/Makefile.path
 
 PROG=		bitflag_test
 SRCS+=		bitflag_test.c
@@ -9,5 +10,7 @@ SRCS+=		${PFL_BASE}/psc_util/init.c
 SRCS+=		${PFL_BASE}/psc_util/log.c
 SRCS+=		${PFL_BASE}/psc_util/printhex.c
 SRCS+=		${PFL_BASE}/psc_util/strlcpy.c
+
+MODULES+=	pfl
 
 include ${PFLMK}
