--- a/psc_fsutil_libs/tests/setprocesstitle/Makefile
+++ b/psc_fsutil_libs/tests/setprocesstitle/Makefile
@@ -1,6 +1,7 @@
 # $Id$
 
-include ../Makefile.path
+ROOTDIR=../../..
+include ${ROOTDIR}/Makefile.path
 
 PROG=		setprocesstitle_test
 SRCS+=		setprocesstitle_test.c
