--- a/psc_fsutil_libs/tests/sig/Makefile
+++ b/psc_fsutil_libs/tests/sig/Makefile
@@ -1,9 +1,10 @@
 # $Id$
 
-include ../Makefile.path
+ROOTDIR=../../..
+include ${ROOTDIR}/Makefile.path
 
 PROG=		sig_test
 SRCS+=		sig_test.c
-MODULES+=	pthread
+MODULES+=	pthread pfl
 
 include ${PFLMK}
