alloc allocator test
git-svn-id: svn+ssh://frodo/cluster/svn/projects@10929 3eda493b-6a19-0410-b2e0-ec8ea4dd8fda

--- a/psc_fsutil_libs/tests/Makefile
+++ b/psc_fsutil_libs/tests/Makefile
@@ -4,6 +4,7 @@ ROOTDIR=../..
 include ${ROOTDIR}/Makefile.path
 
 SUBDIRS+=	acsvc
+SUBDIRS+=	alloc
 SUBDIRS+=	atomic
 SUBDIRS+=	bitflag
 SUBDIRS+=	fmtstr
