--- a/compat/host_name_max/Makefile
+++ b/compat/host_name_max/Makefile
@@ -3,8 +3,8 @@
 ROOTDIR=../..
 include ${ROOTDIR}/Makefile.path
 
-PROG=		posix_memalign_compat
-SRCS+=		posix_memalign_compat.c
+PROG=		host_name_max_compat
+SRCS+=		host_name_max_compat.c
 
 MODULES+=	pfl
 
