--- a/compat/clock_gettime/Makefile
+++ b/compat/clock_gettime/Makefile
@@ -5,5 +5,6 @@ include ${ROOTDIR}/Makefile.path
 
 PROG=		clock_gettime_compat
 SRCS+=		clock_gettime_compat.c
+LDFLAGS+=	${LIBRT}
 
 include ${MAINMK}
