add test for dynarray
git-svn-id: svn+ssh://frodo/cluster/svn/projects@11272 3eda493b-6a19-0410-b2e0-ec8ea4dd8fda

--- a/psc_fsutil_libs/tests/Makefile
+++ b/psc_fsutil_libs/tests/Makefile
@@ -7,6 +7,7 @@ SUBDIRS+=	acsvc
 SUBDIRS+=	alloc
 SUBDIRS+=	atomic
 SUBDIRS+=	bitflag
+SUBDIRS+=	dynarray
 SUBDIRS+=	fmtstr
 SUBDIRS+=	hash2
 SUBDIRS+=	list
