--- a/psc_fsutil_libs/tests/setprocesstitle/Makefile
+++ b/psc_fsutil_libs/tests/setprocesstitle/Makefile
@@ -6,6 +6,7 @@ include ${ROOTDIR}/Makefile.path
 PROG=		setprocesstitle_test
 SRCS+=		setprocesstitle_test.c
 SRCS+=		${PFL_BASE}/psc_util/alloc.c
+SRCS+=		${PFL_BASE}/psc_util/init.c
 SRCS+=		${PFL_BASE}/psc_util/log.c
 SRCS+=		${PFL_BASE}/psc_util/setprocesstitle.c
 
