--- a/psc_fsutil_libs/utils/rtget/Makefile
+++ b/psc_fsutil_libs/utils/rtget/Makefile
@@ -6,6 +6,7 @@ include ${ROOTDIR}/Makefile.path
 PROG=		rtget
 SRCS=		rtget.c
 SRCS+=		${PFL_BASE}/psc_util/alloc.c
+SRCS+=		${PFL_BASE}/psc_util/init.c
 SRCS+=		${PFL_BASE}/psc_util/log.c
 SRCS+=		${PFL_BASE}/psc_util/netutil.c
 
