--- a/psc_fsutil_libs/utils/Makefile
+++ b/psc_fsutil_libs/utils/Makefile
@@ -6,6 +6,7 @@ include ${ROOTDIR}/Makefile.path
 SUBDIRS+=	base64
 SUBDIRS+=	odtable
 SUBDIRS+=	random
+SUBDIRS+=	rtgetif
 SUBDIRS+=	sock
 SUBDIRS+=	timecrc
 SUBDIRS+=	typedump
