more renaming.  svn is stupid
git-svn-id: svn+ssh://frodo/cluster/svn/projects@11412 3eda493b-6a19-0410-b2e0-ec8ea4dd8fda

--- a/psc_fsutil_libs/utils/rtgetif/Makefile
+++ b/psc_fsutil_libs/utils/rtgetif/Makefile
@@ -3,8 +3,8 @@
 ROOTDIR=../../..
 include ${ROOTDIR}/Makefile.path
 
-PROG=		rtget
-SRCS=		rtget.c
+PROG=		rtgetif
+SRCS=		rtgetif.c
 SRCS+=		${PFL_BASE}/psc_util/alloc.c
 SRCS+=		${PFL_BASE}/psc_util/init.c
 SRCS+=		${PFL_BASE}/psc_util/log.c
